<resources>
    <string name="app_name">Astronomy Quiz</string>
    <string name="question_one">How many earths can fit inside the sun?</string>
    <string name="question_two">Which of these planets are impossible to walk on because they do not have a solid surface?</string>
    <string name="question_three">Which of the following planets have a blue sunset?</string>
    <string name="question_four">Olympus moon, which is 3 times higher than the Mount Everest, is the highest mountain known to man and is located on ______.</string>
    <string name="question_five">What is the name of the first space-rated orbiter in NASA\'s Space Shuttle Fleet?</string>
    <string name="userName">Name</string>
    <string name="q_one_answer1">1,000</string>
    <string name="q_one_answer2">10,000</string>
    <string name="q_one_answer3">100,000</string>
    <string name="q_one_answer4">1,000,000</string>
    <string name="earth">Earth</string>
    <string name="venus">Venus</string>
    <string name="mercury">Mercury</string>
    <string name="jupiter">Jupiter</string>
    <string name="mars">Mars</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>
    <string name="questionFiveHint">Name of Space Orbitor</string>
    <string name="button">Submit</string>
</resources>
